# mbedcrypto_sys-rust

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md
mbedtls/: config.h
src/: lib.rs  mbedtls.rs
tests/: selftest.rs
